--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,16 @@
-server.port=8080
+#Desired PORT for ASML-REST-SERVICE 
+server.port=8082
 
+#Multi_part properties
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=1000MB
 spring.servlet.multipart.max-request-size=1000MB
+
+
+#Update folder location here 
+asml.path.SCREENSHOT_FILE = /home/manikandan/ASML/ASML_DATA
+asml.path.GENERATED_FILE = /home/manikandan/ASML/ASML_Gen_Data
+
+#H2 Database Configuration
+spring.datasource.url = jdbc:h2:mem:test
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
